# ccc

./: .gitignore  .gitmodules  fisrt.drawio
QEMU/: 2_install.sh  qemu.md
QEMU/Fedora/: 1_create_disk.sh  2_install.sh  3_start.sh
QEMU/Manjaro/: start-manjaro.sh
QEMU/ubuntu_x86/: 1_create_disk.sh  2_install.sh  2_install_old.sh  3_start.sh  3_start_old.sh
c_101/: a.out
c_101/data_structures/: data_structures.md
c_101/linux_c_beginning/: a.out
c_101/udemy/: c_udemy.md
cmake_101/OLAS/: CMakeLists.txt  configure.sh
cmake_101/OLAS/src/: main.cpp
cpp_101/cpp_beginning/: 34_destructors_in_inheritance.cpp  a.out
cpp_101/cpp_examples/: a.out
cpp_101/moshcpp/: moshcpp_part2.md
linux/: SLAB: Kernel memory allocator design and philosophy.md  SL[AUO]B: Kernel memory allocator design and philosophy.md  advanced_linux.md  bash_shell_and_scripts.md  jun@192.168.64.4  linux_security_modules.md  performance_tunning.md
linux/bash_scripts/: date.2  output
linux_kernel/: linux_kernel_notes.md  linux_security_modules.md
python/pandas/: pandas_indexing.ipynb
sdl2_demo/: CMakeLists.txt  a.out  audioobject.cpp  audioobject.hpp  iaudiocontext.hpp  iaudiodata.hpp  iaudiodevice.hpp  sampleinfo.hpp  simple_wav_player.cpp
sdl2_demo/src/: main.cpp
tech_stacks/AI/: introduction_to_LLM.md  machine_learning_with_python_foundations.md
tech_stacks/communication/: i2c.md  uart.md
tech_stacks/computer_systems/: cmu_computer_systems.md  temp
tech_stacks/computer_vision/: first_principles_computer_version.md
tech_stacks/data_structures/: data_structures.md
tech_stacks/graphics/: linux_graphics_stack.md  (+1 more)
(+16 files in other folders)
